--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+.Demo {
+  max-width: 36rem;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+.last-action {
+  display: flex;
+}
+
+.toggle-action-types {
+  display: flex;
+  align-items: center;
+}
+
+.last-action > * {
+  margin-right: 1rem;
+}
+
 .App {
   text-align: center;
 }
